# belltracker

./: .gitignore  CMakeLists.txt  GUIDE.md  README.md  belltracker.h  belltracker_cal.cpp  belltracker_perf.cpp  belltracker_record.cpp  main.cpp  setup.sh
deploy/: belltracker.service  build.sh  connect-belltracker-fluidsynth.sh  connect-fluidsynth.service  fluidsynth.service  install-services.sh  install-tools.sh  jackd.service  start-belltracker.sh  start-services.sh
